# esp32-p4-eez-studio-template

./: .gitignore  CMakeLists.txt  README.md  esp32-p4-template.eez-project  sdkconfig.defaults
components/rtc/: CMakeLists.txt  README.md
components/rtc/include/: rtc_component.h
components/rtc/src/: rtc_component.c
components/screenshot/: CMakeLists.txt  README.md
components/screenshot/include/: screenshot.h
components/screenshot/src/: screenshot.c
components/sd_card/: CMakeLists.txt  README.md  idf_component.yml
components/sd_card/include/: sd_card.h
components/sd_card/src/: sd_card.c
components/ui/: CMakeLists.txt  screens.c  ui.c  ui.h
components/wifi_module/: CMakeLists.txt  idf_component.yml
components/wifi_module/include/: wifi_module.h
components/wifi_module/src/: wifi_module.c
main/: CMakeLists.txt  idf_component.yml  main.c
